Correct h3 text alignment for exceptional items

--- a/css/src/_exceptional-items.scss
+++ b/css/src/_exceptional-items.scss
@@ -87,6 +87,7 @@
 			h3 {
 				font-size: 1.85rem;
 				line-height: 1.2;
+				text-align: left;
 			}
 
 			.description {
